@@ -25,7 +25,7 @@
 #endif
 
 
-// Used in package utils, so needs to be visible
+// R_Change: Used in package utils, so needs to be visible
 #include <R_ext/Visibility.h>
 // See the comments in crc32_fast.c. They aren't duplicated here.
 extern attribute_visible LZMA_API(uint64_t)
